--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
@@ -32,6 +32,7 @@
         </entry>
       </util:map>
     </property>
+    <property name="fallbackTo" value="en" />
   </bean>
 
 
@@ -70,6 +71,7 @@
         <entry key="ja" value-ref="CL_WEEK_JA" />
       </util:map>
     </property>
+    <property name="fallbackTo" value="en" />
   </bean>
 
   <bean id="CL_testSetColumns01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
@@ -119,6 +121,7 @@
         </entry>
       </util:map>
     </property>
+    <property name="fallbackTo" value="en" />
   </bean>
 
 
@@ -155,5 +158,6 @@
         <entry key="ja" value-ref="CL_WEEK_JA" />
       </util:map>
     </property>
+    <property name="fallbackTo" value="en" />
   </bean>
 </beans>
