--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
@@ -160,4 +160,42 @@
     <property name="fallbackTo" value="en" />
   </bean>
 
+  <bean id="CL_testResolveLocale01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+    <property name="rows">
+      <util:map>
+        <entry key="en">
+          <util:map>
+            <entry key="0" value="Sun." />
+            <entry key="1" value="Mon." />
+            <entry key="2" value="Tue." />
+            <entry key="3" value="Wed." />
+            <entry key="4" value="Thu." />
+            <entry key="5" value="Fri." />
+            <entry key="6" value="Sat." />
+          </util:map>
+        </entry>
+      </util:map>
+    </property>
+    <property name="fallbackTo" value="en" />
+  </bean>
+
+  <bean id="CL_testResolveLocale02" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+    <property name="rows">
+      <util:map>
+        <entry key="en_US">
+          <util:map>
+            <entry key="0" value="Sun." />
+            <entry key="1" value="Mon." />
+            <entry key="2" value="Tue." />
+            <entry key="3" value="Wed." />
+            <entry key="4" value="Thu." />
+            <entry key="5" value="Fri." />
+            <entry key="6" value="Sat." />
+          </util:map>
+        </entry>
+      </util:map>
+    </property>
+    <property name="fallbackTo" value="en_US" />
+  </bean>
+
 </beans>
