fix restructure the test patterns #363 #803

--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
@@ -5,7 +5,7 @@
 		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd">
 
 
-  <bean id="CL_testSetRows01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testSetRows" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rows">
       <util:map>
         <entry key="en">
@@ -33,24 +33,6 @@
       </util:map>
     </property>
     <property name="fallbackTo" value="en" />
-  </bean>
-
-  <bean id="CL_testSetRows02" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
-    <property name="rows">
-      <util:map>
-        <entry key="en_US">
-          <util:map>
-            <entry key="0" value="Sun." />
-            <entry key="1" value="Mon." />
-            <entry key="2" value="Tue." />
-            <entry key="3" value="Wed." />
-            <entry key="4" value="Thu." />
-            <entry key="5" value="Fri." />
-            <entry key="6" value="Sat." />
-          </util:map>
-        </entry>
-      </util:map>
-    </property>
   </bean>
 
   <bean id="CL_WEEK_EN" class="org.terasoluna.gfw.common.codelist.SimpleMapCodeList">
@@ -81,7 +63,7 @@
     </property>
   </bean>
 
-  <bean id="CL_testSetRowsByCodeList01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testSetRowsByCodeList" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rowsByCodeList">
       <util:map>
         <entry key="en" value-ref="CL_WEEK_EN" />
@@ -91,7 +73,7 @@
     <property name="fallbackTo" value="en" />
   </bean>
 
-  <bean id="CL_testSetColumns01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testSetColumns" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="columns">
       <util:map>
         <entry key="0">
@@ -155,12 +137,23 @@
             <entry key="6" value="Sat." />
           </util:map>
         </entry>
+        <entry key="ja">
+          <util:map>
+            <entry key="0" value="日" />
+            <entry key="1" value="月" />
+            <entry key="2" value="火" />
+            <entry key="3" value="水" />
+            <entry key="4" value="木" />
+            <entry key="5" value="金" />
+            <entry key="6" value="土" />
+          </util:map>
+        </entry>
       </util:map>
     </property>
     <property name="fallbackTo" value="en" />
   </bean>
 
-  <bean id="CL_testResolveLocale01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testResolveLocale" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rows">
       <util:map>
         <entry key="en">
@@ -174,12 +167,45 @@
             <entry key="6" value="Sat." />
           </util:map>
         </entry>
+        <entry key="en_GB">
+          <util:map>
+            <entry key="0" value="Sun." />
+            <entry key="1" value="Mon." />
+            <entry key="2" value="Tue." />
+            <entry key="3" value="Wed." />
+            <entry key="4" value="Thu." />
+            <entry key="5" value="Fri." />
+            <entry key="6" value="Sat." />
+          </util:map>
+        </entry>
+        <entry key="ja">
+          <util:map>
+            <entry key="0" value="日" />
+            <entry key="1" value="月" />
+            <entry key="2" value="火" />
+            <entry key="3" value="水" />
+            <entry key="4" value="木" />
+            <entry key="5" value="金" />
+            <entry key="6" value="土" />
+          </util:map>
+        </entry>
+        <entry key="ja_JP">
+          <util:map>
+            <entry key="0" value="日" />
+            <entry key="1" value="月" />
+            <entry key="2" value="火" />
+            <entry key="3" value="水" />
+            <entry key="4" value="木" />
+            <entry key="5" value="金" />
+            <entry key="6" value="土" />
+          </util:map>
+        </entry>
       </util:map>
     </property>
-    <property name="fallbackTo" value="en" />
+    <property name="fallbackTo" value="ja_JP" />
   </bean>
 
-  <bean id="CL_testResolveLocale02" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testResolveLocaleFallbackToUS" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rows">
       <util:map>
         <entry key="en_US">
