fix fallbackTo locale en to ja #363 #803

--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
@@ -147,7 +147,7 @@
         </entry>
       </util:map>
     </property>
-    <property name="fallbackTo" value="en" />
+    <property name="fallbackTo" value="ja" />
   </bean>
 
   <bean id="CL_testResolveLocale" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
