--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
@@ -199,7 +199,7 @@
         </entry>
       </util:map>
     </property>
-    <property name="fallbackTo" value="ja_JP" />
+    <property name="fallbackTo" value="ja" />
   </bean>
 
   <bean id="CL_testResolveLocaleFallbackToUS" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
