Improve i18nCodeList locale resolution. #363 #803 (#840)
* Improve i18nCodeList locale resolution. #363 #803

* Add assertion for fallbackTo and remove throwing exception from asMap. #363 #803

* Separate code resolving the locale from asMap. #363 #803

* Remove superfluous language only locale object creation. #363 #803

* Move position of setFallbackTo method. #363 #803

* Remove getFallbackTo method. #363 #803

* Add description about resolving the locale to class-level JavaDoc. #363 #803

* Add description, about role of resolving a locale was moved, to class-level JavaDoc. #363 #803

* Pull up SimpleI18nCodeList.asMap to AbstractI18nCodeList. #363 #803

* Fix I18nCodeList bean definition for test. #363 #803

* add version infomation to javadoc #363 #803

* remove check of isDebugEnabled #363 #803

* fix assert error message of codelist #363 #803

* fix javadoc for locale resolution of I18nCodeList #363 #803

* fix methods in order of visibility #363 #803

* add JUnit test fot resolvedLocale for i18nCodelist #363 #803

* remove unnecessary test #363 #803

* add fallbackTo test pattern #363 #803

* add resolve locale test pattern #363 #803

* add asMap test pattern #363 #803

* add the reason of using Lazy for javadoc #363 #803

* fix restructure the test patterns #363 #803

* fix formatt of codelistTest #363 #803

* remove check of isDebugEnabled #363 #803

* exclude of underscores for method name #363 #803

* fix release version of feature #363 #803

* change the bean's delay definition, to the locale definition in the constructor #363 #803

* remove setting of fallback for bean definition and change default locale to english #363 #803

* fix fallbackTo locale en to ja #363 #803

* add test annotation #363 #803

* add test pattern of setting fallbackto to null #363 #803

* add test pattern of setFallbackto for invalid #363 #803

* change the way of writing the day of the week #363 #803

* change 

--- a/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
+++ b/terasoluna-gfw-common-libraries/terasoluna-gfw-common/src/test/resources/org/terasoluna/gfw/common/codelist/i18n/simpleI18nCodeList.xml
@@ -5,7 +5,7 @@
 		http://www.springframework.org/schema/util http://www.springframework.org/schema/util/spring-util.xsd">
 
 
-  <bean id="CL_testSetRows01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testSetRows" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rows">
       <util:map>
         <entry key="en">
@@ -33,7 +33,6 @@
       </util:map>
     </property>
   </bean>
-
 
   <bean id="CL_WEEK_EN" class="org.terasoluna.gfw.common.codelist.SimpleMapCodeList">
     <property name="map">
@@ -63,7 +62,7 @@
     </property>
   </bean>
 
-  <bean id="CL_testSetRowsByCodeList01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testSetRowsByCodeList" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rowsByCodeList">
       <util:map>
         <entry key="en" value-ref="CL_WEEK_EN" />
@@ -72,7 +71,7 @@
     </property>
   </bean>
 
-  <bean id="CL_testSetColumns01" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testSetColumns" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="columns">
       <util:map>
         <entry key="0">
@@ -121,8 +120,7 @@
     </property>
   </bean>
 
-
-  <bean id="CL_testSetRows03" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+  <bean id="CL_testFallbackTo" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
     <property name="rows">
       <util:map>
         <entry key="en">
@@ -149,11 +147,110 @@
         </entry>
       </util:map>
     </property>
-    <property name="rowsByCodeList">
+    <property name="fallbackTo" value="ja" />
+  </bean>
+
+  <bean id="CL_testFallbackToInvalidLanguage" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList"
+    lazy-init="true">
+    <property name="rows">
       <util:map>
-        <entry key="en" value-ref="CL_WEEK_EN" />
-        <entry key="ja" value-ref="CL_WEEK_JA" />
+        <entry key="en">
+          <util:map>
+            <entry key="0" value="Sun." />
+            <entry key="1" value="Mon." />
+            <entry key="2" value="Tue." />
+            <entry key="3" value="Wed." />
+            <entry key="4" value="Thu." />
+            <entry key="5" value="Fri." />
+            <entry key="6" value="Sat." />
+          </util:map>
+        </entry>
       </util:map>
     </property>
+    <property name="fallbackTo" value="fr" />
   </bean>
+
+  <bean id="CL_testFallbackToInvalidLanguageMatchingNation" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList"
+    lazy-init="true">
+    <property name="rows">
+      <util:map>
+        <entry key="en">
+          <util:map>
+            <entry key="0" value="Sun." />
+            <entry key="1" value="Mon." />
+            <entry key="2" value="Tue." />
+            <entry key="3" value="Wed." />
+            <entry key="4" value="Thu." />
+            <entry key="5" value="Fri." />
+            <entry key="6" value="Sat." />
+          </util:map>
+        </entry>
+      </util:map>
+    </property>
+    <property name="fallbackTo" value="en_US" />
+  </bean>
+
+  <bean id="CL_testResolveLocale" class="org.terasoluna.gfw.common.codelist.i18n.SimpleI18nCodeList">
+    <property name="rows">
+      <util:map>
+        <entry key="de">
+          <util:map>
+            <entry key="0" value="Sonntag" />
+            <entry key="1" value="Montag" />
+            <entry key="2" value="Dienstag" />
+            <entry key="3" value="Mittwoch" />
+            <entry key="4" value="Donnerstag" />
+            <entry key="5" value="Freitag" />
+            <entry key="6" value="Samstag" />
+          </util:map>
+        </entry>
+        <entry key="fr">
+          <util:map>
+            <entry key="0" value="Dim" />
+            <entry key="1" value="Lun" />
+            <entry key="2" value="Mar" />
+            <entry key="3" value="Mer" />
+            <entry key="4" value="Jeu" />
+            <entry key="5" value="Ven" />
+            <entry key="6" value="Sam" />
+          </util:map>
+        </entry>
+        <entry key="fr_ca">
+          <util:map>
+            <entry key="0" value="dimanche" />
+            <entry key="1" value="lundi" />
+            <entry key="2" value="mardi" />
+            <entry key="3" value="mercredi" />
+            <entry key="4" value="jeudi" />
+            <entry key="5" value="vendredi" />
+            <entry key="6" value="samedi" />
+          </util:map>
+        </entry>
+        <entry key="ja">
+          <util:map>
+            <entry key="0" value="日" />
+            <entry key="1" value="月" />
+            <entry key="2" value="火" />
+            <entry key="3" value="水" />
+            <entry key="4" value="木" />
+            <entry key="5" value="金" />
+            <entry key="6" value="土" />
+          </util:map>
+        </entry>
+        <entry key="en_us">
+          <util:map>
+            <entry key="0" value="Sunday" />
+            <entry key="1" value="Monday" />
+            <entry key="2" value="Tuesday" />
+            <entry key="3" value="Wednesday" />
+            <entry key="4" value="Thursday" />
+            <entry key="5" value="Friday" />
+            <entry key="6" value="Saturday" />
+          </util:map>
+        </entry>
+      </util:map>
+    </property>
+    <property name="fallbackTo" value="de" />
+  </bean>
+
 </beans>
